--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="light_grey">#D3D3D3</color>
+    <color name="dark_grey">#5A5A5A</color>
+    <color name="red">#FF0000</color>
+    <color name="green">#16A61C</color>
+    <color name="yellow">#DDC809</color>
 </resources>
