glass category works fine

--- a/app/src/main/res/layout/rv_home_shoe.xml
+++ b/app/src/main/res/layout/rv_home_shoe.xml
@@ -31,8 +31,8 @@
             android:layout_marginTop="4dp"
             android:text="Product Name"
             android:maxLines="1"
-            android:maxLength="15"
             android:ellipsize="end"
+            android:ems="7"
             app:layout_constraintEnd_toStartOf="@+id/img_add_wishlist"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/img_product"
@@ -45,8 +45,8 @@
             android:layout_marginTop="4dp"
             android:text="Product Price"
             android:maxLines="1"
-            android:maxLength="15"
             android:ellipsize="end"
+            android:ems="7"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/img_add_wishlist"
             app:layout_constraintHorizontal_bias="0.0"
