--- a/app/src/main/res/layout/rv_cart.xml
+++ b/app/src/main/res/layout/rv_cart.xml
@@ -25,12 +25,13 @@
 
         <TextView
             android:id="@+id/txt_product_name"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
             android:ellipsize="end"
             android:maxLines="1"
+            android:ems="11"
             android:text="Product Name"
             android:textStyle="bold"
             app:layout_constraintEnd_toStartOf="@+id/btn_plus"
@@ -40,17 +41,19 @@
 
         <TextView
             android:id="@+id/txt_product_price"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:ellipsize="end"
+            android:ems="11"
             android:maxLines="1"
             android:text="Product Price"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/txt_counter"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/img_product"
             app:layout_constraintTop_toBottomOf="@+id/txt_product_name"
             app:layout_constraintVertical_bias="0.0" />
