--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -108,7 +108,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
-        android:text="Total Price"
+        android:text="Total"
         app:layout_constraintBottom_toTopOf="@+id/btn_checkout"
         app:layout_constraintEnd_toStartOf="@+id/txt_total"
         app:layout_constraintStart_toStartOf="parent" />
