--- a/app/src/main/res/layout/fragment_phone_auth.xml
+++ b/app/src/main/res/layout/fragment_phone_auth.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="16dp"
-    tools:context=".ui.phoneauth.PhoneAuthActivity">
-
+    tools:context=".ui.fragments.product.PhoneAuthFragment">
 
     <EditText
         android:id="@+id/edt_phone"
@@ -56,6 +55,5 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edt_phone" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
