--- a/app/src/main/res/layout/fragment_verify_otp.xml
+++ b/app/src/main/res/layout/fragment_verify_otp.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.verifyotp.VerifyOtpActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".ui.fragments.product.VerifyOtpFragment">
 
     <TextView
         android:id="@+id/txt_otp_sent_num_txt"
@@ -122,4 +122,5 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_resend_otp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
