--- a/app/src/main/res/navigation/product_nav_graph.xml
+++ b/app/src/main/res/navigation/product_nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/product_nav_graph"
-    app:startDestination="@id/productFragment">
+    app:startDestination="@id/phoneAuthFragment">
 
     <fragment
         android:id="@+id/productFragment"
@@ -25,5 +25,36 @@
         <argument
             android:name="currentProduct"
             app:argType="com.example.e_commerce.model.Product" />
+    </fragment>
+    <fragment
+        android:id="@+id/phoneAuthFragment"
+        android:name="com.example.e_commerce.ui.fragments.product.PhoneAuthFragment"
+        android:label="fragment_phone_auth"
+        tools:layout="@layout/fragment_phone_auth" >
+        <action
+            android:id="@+id/action_phoneAuthFragment_to_verifyOtpFragment"
+            app:destination="@id/verifyOtpFragment" />
+        <action
+            android:id="@+id/action_phoneAuthFragment_to_productFragment"
+            app:destination="@id/productFragment"
+            app:popUpTo="@id/productFragment"
+            app:popUpToInclusive="true" />
+    </fragment>
+    <fragment
+        android:id="@+id/verifyOtpFragment"
+        android:name="com.example.e_commerce.ui.fragments.product.VerifyOtpFragment"
+        android:label="fragment_verify_otp"
+        tools:layout="@layout/fragment_verify_otp" >
+        <action
+            android:id="@+id/action_verifyOtpFragment_to_productFragment"
+            app:destination="@id/productFragment"
+            app:popUpTo="@id/productFragment"
+            app:popUpToInclusive="true" />
+        <argument
+            android:name="phone"
+            app:argType="string" />
+        <argument
+            android:name="verificationId"
+            app:argType="string" />
     </fragment>
 </navigation>
