--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -22,4 +22,8 @@
         <item name="android:paddingEnd">8dp</item>
         <item name="android:gravity">center</item>
     </style>
+    
+    <style name="fullScreenActivity" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="android:windowFullscreen">true</item>
+    </style>
 </resources>
