--- a/app/src/main/res/layout/rv_cart.xml
+++ b/app/src/main/res/layout/rv_cart.xml
@@ -32,7 +32,7 @@
             android:ellipsize="end"
             android:maxLines="1"
             android:ems="11"
-            android:text="Product Name"
+            android:text="@string/product_name"
             android:textStyle="bold"
             app:layout_constraintEnd_toStartOf="@+id/btn_plus"
             app:layout_constraintHorizontal_bias="0.0"
@@ -49,7 +49,7 @@
             android:ellipsize="end"
             android:ems="11"
             android:maxLines="1"
-            android:text="Product Price"
+            android:text="@string/product_price"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/txt_counter"
@@ -62,7 +62,7 @@
             android:id="@+id/btn_plus"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:text="+"
+            android:text="@string/plus"
             android:background="@drawable/cart_product_counter"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -74,7 +74,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="0"
+            android:text="@string/zero"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/btn_plus"
@@ -87,7 +87,7 @@
             android:layout_marginTop="8dp"
             android:background="@drawable/cart_product_counter"
             android:backgroundTint="@color/black"
-            android:text="-"
+            android:text="@string/minus"
             android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="@+id/txt_counter"
             app:layout_constraintStart_toStartOf="@+id/txt_counter"
