--- a/app/src/main/res/layout/fragment_phone_auth.xml
+++ b/app/src/main/res/layout/fragment_phone_auth.xml
@@ -25,7 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Send OTP"
+        android:text="@string/send_otp"
         android:textAllCaps="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -36,7 +36,7 @@
         android:id="@+id/txt_country_code"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="+880"
+        android:text="@string/_880"
         android:textColor="@color/black"
         android:textSize="22sp"
         android:textStyle="bold"
