--- a/app/src/main/res/layout/fragment_verify_otp.xml
+++ b/app/src/main/res/layout/fragment_verify_otp.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.fragments.product.VerifyOtpFragment">
 
     <TextView
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:text="Code was sent to"
+        android:text="@string/code_was_sent_to"
         app:layout_constraintBottom_toTopOf="@+id/edt_code1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -32,11 +32,11 @@
 
     <EditText
         android:id="@+id/edt_code2"
+        style="@style/CustomEditText"
         android:layout_width="35dp"
         android:layout_height="40dp"
         android:layout_marginStart="4dp"
         android:background="@drawable/custom_input"
-        style="@style/CustomEditText"
         app:layout_constraintBottom_toBottomOf="@+id/edt_code1"
         app:layout_constraintStart_toEndOf="@+id/edt_code1"
         app:layout_constraintTop_toTopOf="@+id/edt_code1"
@@ -44,44 +44,44 @@
 
     <EditText
         android:id="@+id/edt_code3"
+        style="@style/CustomEditText"
         android:layout_width="35dp"
         android:layout_height="40dp"
         android:layout_marginStart="4dp"
         android:background="@drawable/custom_input"
-        style="@style/CustomEditText"
         app:layout_constraintBottom_toBottomOf="@+id/edt_code2"
         app:layout_constraintStart_toEndOf="@+id/edt_code2"
         app:layout_constraintTop_toTopOf="@+id/edt_code2" />
 
     <EditText
         android:id="@+id/edt_code4"
+        style="@style/CustomEditText"
         android:layout_width="35dp"
         android:layout_height="40dp"
         android:layout_marginStart="4dp"
         android:background="@drawable/custom_input"
-        style="@style/CustomEditText"
         app:layout_constraintBottom_toBottomOf="@+id/edt_code3"
         app:layout_constraintStart_toEndOf="@+id/edt_code3"
         app:layout_constraintTop_toTopOf="@+id/edt_code3" />
 
     <EditText
         android:id="@+id/edt_code5"
+        style="@style/CustomEditText"
         android:layout_width="35dp"
         android:layout_height="40dp"
         android:layout_marginStart="4dp"
         android:background="@drawable/custom_input"
-        style="@style/CustomEditText"
         app:layout_constraintBottom_toBottomOf="@+id/edt_code4"
         app:layout_constraintStart_toEndOf="@+id/edt_code4"
         app:layout_constraintTop_toTopOf="@+id/edt_code4" />
 
     <EditText
         android:id="@+id/edt_code6"
+        style="@style/CustomEditText"
         android:layout_width="35dp"
         android:layout_height="40dp"
         android:layout_marginStart="4dp"
         android:background="@drawable/custom_input"
-        style="@style/CustomEditText"
         app:layout_constraintBottom_toBottomOf="@+id/edt_code5"
         app:layout_constraintStart_toEndOf="@+id/edt_code5"
         app:layout_constraintTop_toTopOf="@+id/edt_code5" />
@@ -91,7 +91,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Verify"
+        android:text="@string/verify"
         android:textAllCaps="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -103,7 +103,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Resend OTP"
+        android:text="@string/resend_otp"
         android:textColor="@color/red"
         android:textSize="16sp"
         android:textStyle="bold"
@@ -122,5 +122,17 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_resend_otp" />
+
+    <androidx.appcompat.widget.AppCompatSpinner
+        android:id="@+id/spinner_otp"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_verify" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
