--- a/app/src/main/res/layout/rv_home_variety.xml
+++ b/app/src/main/res/layout/rv_home_variety.xml
@@ -30,7 +30,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:text="Product Name"
+            android:text="@string/product_name"
             android:maxLines="1"
             android:ellipsize="end"
             android:ems="15"
@@ -47,7 +47,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:text="Product Price"
+            android:text="@string/product_price"
             android:maxLines="1"
             android:ellipsize="end"
             android:ems="15"
