--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,18 +2,18 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:id="@+id/product_nav_graph"
-        android:title="Home"
+        android:title="@string/home"
         android:icon="@drawable/baseline_home"/>
 
     <item android:id="@+id/fav_nav_graph"
-        android:title="Wishlist"
+        android:title="@string/wishlist"
         android:icon="@drawable/baseline_favorite"/>
 
     <item android:id="@+id/cart_nav_graph"
-        android:title="Cart"
+        android:title="@string/cart"
         android:icon="@drawable/baseline_shopping_cart"/>
 
     <item android:id="@+id/profile_nav_graph"
-        android:title="Profile"
+        android:title="@string/profile"
         android:icon="@drawable/baseline_profile"/>
 </menu>
